# panther

./: .gitignore  PantherEngine.py  README.md  README.rst  main.py  requirements.txt  setup.cfg  test.js  test_tracer.py  tox.ini
.circleci/: config.yml
bandit/blacklists/: calls.py  imports.py  utils.py
bandit/cli/: baseline.py  config_generator.py  main.py
bandit/core/: blacklisting.py  config.py  constants.py  context.py  docs_utils.py  extension_loader.py  issue.py  manager.py  meta_ast.py  metrics.py  node_visitor.py  test_properties.py  test_set.py  tester.py  utils.py  visitor.py
bandit/formatters/: csv.py  custom.py  html.py  json.py  screen.py  text.py  utils.py  xml.py  yaml.py
bandit/plugins/: app_debug.py  asserts.py  crypto_request_no_cert_validation.py  exec.py  exec_as_root.py  general_bad_file_permissions.py  general_hardcoded_password.py  injection_sql.py
doc/: syntax-tree-format.md
doc/source/: conf.py  config.rst  index.rst
doc/source/formatters/: csv.rst  html.rst  index.rst  json.rst  screen.rst  text.rst  xml.rst  yaml.rst
doc/source/man/: bandit.rst  panther.rst
doc/source/plugins/: b101_assert_used.rst  b102_exec_used.rst  b103_set_bad_file_permissions.rst  b104_hardcoded_bind_all_interfaces.rst  b105_hardcoded_password_string.rst  b106_hardcoded_password_funcarg.rst  b107_hardcoded_password_funcdef.rst  b108_hardcoded_tmp_directory.rst  b109_password_config_option_not_marked_secret.rst  b110_try_except_pass.rst  b111_execute_with_run_as_root_equals_true.rst  b112_try_except_continue.rst  b201_flask_debug_true.rst  b501_request_with_no_cert_validation.rst  b502_ssl_with_bad_version.rst  b503_ssl_with_bad_defaults.rst  b504_ssl_with_no_version.rst  b505_weak_cryptographic_key.rst  b506_yaml_load.rst  b601_paramiko_calls.rst  b602_subprocess_popen_with_shell_equals_true.rst  b603_subprocess_without_shell_equals_true.rst  b604_any_other_function_with_shell_equals_true.rst  b605_start_process_with_a_shell.rst  b606_start_process_with_no_shell.rst  b607_start_process_with_partial_path.rst  b608_hardcoded_sql_expressions.rst  b609_linux_commands_wildcard_injection.rst  b701_jinja2_autoescape_false.rst  b702_use_of_mako_templates.rst  index.rst
examples/: eval.js  imports-function.py  mako_templating.py  nonsense.js  nosec.js  nosql_injection.js  okay.js  server_side_injection.js  sql_injection.js  sql_statements.py
examples/tracer/: basic.js  basic.ref1.js  basic.ref3.js  basic.ref4.js
examples/tracer/folder_reference/: basic.ref2.js
panther/: __init__.py
panther/cli/: __init__.py  baseline.py  config_generator.py  main.py
panther/core/: __init__.py  config.py  constants.py  context.py  docs_utils.py  extension_loader.py  issue.py  manager.py  meta_ast.py  metrics.py  node_visitor.py  nsp_manager.py  pyesprima.py  test_properties.py  test_set.py  tester.py  utils.py  visitor.py
panther/core/tracer/: diver.py  file_extractor.py  main.py  route_finder.py
panther/core/tracer/entities/: function.py  route.py
panther/formatters/: csv.py  custom.py  html.py  json.py  screen.py  text.py  utils.py  xml.py  yaml.py
panther/plugins/: app_debug.py  asserts.py  crypto_request_no_cert_validation.py  exec.py  exec_as_root.py  general_bad_file_permissions.py  general_bind_all_interfaces.py  general_hardcoded_password.py  general_hardcoded_tmp.py  injection_paramiko.py  injection_shell.py  injection_sql.py  injection_wildcard.py  insecure_ssl_tls.py  jinja2_templates.py  js_nosql_injection.py  js_server_side_injection.py  js_server_side_injection_eval.py  js_server_side_injection_new_function.py  js_sql_injection.py  mako_templates.py  secret_config_option.py  try_except_continue.py  try_except_pass.py  weak_cryptographic_key.py  yaml_load.py
tests/functional/: test_baseline.py  test_functional.py  test_runtime.py  test_tracer.py
tests/unit/cli/: test_baseline.py  test_config_generator.py  test_main.py
tests/unit/core/: test_config.py  test_context.py  test_issue.py  test_manager.py  test_meta_ast.py  test_test_set.py  test_tracer.py  test_util.py
tests/unit/formatters/: test_csv.py  test_html.py  test_json.py  test_screen.py  test_text.py  test_xml.py  test_yaml.py
