[metadata]
name = panther
summary = Security oriented static analyser for python code.
description-file =
    README.rst
author = ITC PayPal Project
home-page = https://github.com/Yhnlvy/panther
classifier =
    Environment :: ITC
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Topic :: Security

[entry_points]
console_scripts =
    panther = panther.cli.main:main
    panther-config-generator = panther.cli.config_generator:main
    panther-baseline = panther.cli.baseline:main
panther.formatters =
    csv = panther.formatters.csv:report
    json = panther.formatters.json:report
    txt = panther.formatters.text:report
    xml = panther.formatters.xml:report
    html = panther.formatters.html:report
    screen = panther.formatters.screen:report
    yaml = panther.formatters.yaml:report
    custom = panther.formatters.custom:report
panther.plugins =
    # panther/plugins/general_hardcoded_password.py
    never_ever_ever_use_eval = panther.plugins.general_hardcoded_password:never_ever_ever_use_eval

    # panther/plugins/js_server_side_injection.py
    eval_used = panther.plugins.js_server_side_injection:eval_used
    new_function_used = panther.plugins.js_server_side_injection:new_function_used

    # panther/plugins/js_sql_injection.py
    hardcoded_sql_expressions_merge_function = panther.plugins.js_sql_injection:hardcoded_sql_expressions_merge_function
    hardcoded_sql_expressions_with_plus = panther.plugins.js_sql_injection:hardcoded_sql_expressions_with_plus
    hardcoded_sql_expressions_with_template_literal = panther.plugins.js_sql_injection:hardcoded_sql_expressions_with_template_literal
    hardcoded_sql_expressions_with_plus_equal = panther.plugins.js_sql_injection:hardcoded_sql_expressions_with_plus_equal

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
autodoc_tree_index_modules = True
autodoc_tree_excludes =
  examples*

[bdist_wheel]
universal = 1
